# mtu

./: .gitignore  .last-update-check  .mcp.json  CHANGELOG.md  Dockerfile  Makefile  README.en.md  README.md  docker-compose.yml  pyproject.toml
hooks/: mtu-record-prompt.py
scripts/: auto-update.sh  release.sh
src/mtu/: analyzer.py  db.py  server.py
src/mtu/web/: app.py
src/mtu/web/templates/: dashboard.html  prompts.html
