[project]
name = "mtu"
version = "0.1.2"
description = "MTU - Monitor de Uso de Tokens para Claude Code e Codex"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.9.0",
]

[project.scripts]
mtu-server = "mtu.server:main"
mtu-web = "mtu.web.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mtu"]
